--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -228,9 +228,6 @@ jobs:
           post-cleanup: false
       - name: Apply workarounds
         run: |
-          # Workaround for https://github.com/prefix-dev/pixi/issues/3762
-          sed -i.bak 's@editable = true@editable = false@g' pixi.toml
-          rm pixi.toml.bak
           # Add annotations to github actions
           pixi add --no-install --pypi --feature diracx-core pytest-github-actions-annotate-failures
           # Show any changes
@@ -238,6 +235,7 @@ jobs:
       - uses: prefix-dev/setup-pixi@v0.8.3
         with:
           cache: false
+          locked: false
           environments: ${{ matrix.package }}-generate-client
       - name: Run autorest
         run: pixi run -e ${{ matrix.package }}-generate-client generate-client
