--- a/extensions/gubbins/.github/workflows/main.yml
+++ b/extensions/gubbins/.github/workflows/main.yml
@@ -8,10 +8,6 @@ on:
     branches:
       - main
 
-defaults:
-  run:
-    shell: bash -el {0}
-
 jobs:
   unittest:
     name: Unit test - ${{ matrix.package }}
@@ -30,6 +26,19 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - uses: prefix-dev/setup-pixi@v0.8.8
+        with:
+          run-install: false
+          post-cleanup: false
+      - name: Apply workarounds
+        run: |
+          # Workaround for https://github.com/prefix-dev/pixi/issues/3762
+          sed -i.bak 's@editable = true@editable = false@g' pixi.toml
+          rm pixi.toml.bak
+          # Add annotations to github actions
+          pixi add --no-install --pypi --feature diracx-core pytest-github-actions-annotate-failures
+          # Show any changes
+          git diff
       - uses: prefix-dev/setup-pixi@v0.8.3
         with:
           environments: ${{ matrix.package }}
@@ -43,6 +52,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - uses: prefix-dev/setup-pixi@v0.8.8
+        with:
+          run-install: false
+          post-cleanup: false
+      - name: Apply workarounds
+        run: |
+          # Add annotations to github actions
+          pixi add --no-install --pypi --feature diracx-core pytest-github-actions-annotate-failures
+          # Show any changes
+          git diff
       - uses: prefix-dev/setup-pixi@v0.8.3
         with:
           environments: generate-client
