docs: slowly building the structure

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,46 +32,84 @@ theme:
   icon:
     logo: logo
   features:
+    - content.code.annotate
+    - content.code.copy
+    - content.tabs.link
+    - header.autohide
+    - navigation.expand
+    - navigation.indexes
     - navigation.instant
     - navigation.instant.progress
-    - header.autohide
     - navigation.tabs
     - navigation.tabs.sticky
+  custom_dir: docs/overrides/
 
 nav:
   - Home: index.md
 
-  - Security Policy: SECURITY.md
-
   - Roadmap: roadmap.md
 
-  - Users:
+  - User Guide:
+    - user/index.md
+    - Getting started: user/tutorials/getting-started.md
+    - Known installations: user/reference/known-installations.md
+    - DiracX Web:
+      - user/web/index.md
+      - Getting started: user/web/getting-started.md
+    - Programmatic Usage:
+      - user/reference/programmatic-usage/index.md
+      - Command Line: user/reference/programmatic-usage/command-line-interface.md
+      - Python: user/reference/programmatic-usage/python-interface.md
+      - HTTPS: user/reference/programmatic-usage/https-interface.md
     - Reference:
       - Client Config: user/reference/client-configuration.md
 
-  - Administrators:
-    - Explanations:
-      - Configuration: admin/explanations/configuration.md
-      - OpenTelemetry: admin/explanations/opentelemetry.md
-      - Chart structure: admin/explanations/chart-structure.md
-
+  - Administrator Guide:
+    - admin/index.md
+    - Tutorials:
+      - Run locally: admin/tutorials/run_locally.md
     - How-To:
+      - Install kubernetes: admin/how-to/install-kubernetes.md
+      - Installing: admin/how-to/installing.md
       - Convert CS: admin/how-to/convert-cs.md
       - Register a VO: admin/how-to/register-a-vo.md
       - Register the admin VO: admin/how-to/register-the-admin-vo.md
       - Debugging: admin/how-to/debugging.md
-      - Install kubernetes: admin/how-to/install-kubernetes.md
-      - Installing: admin/how-to/installing.md
       - Upgrading: admin/how-to/upgrading.md
-
+    - Explanations:
+      - Configuration: admin/explanations/configuration.md
+      - OpenTelemetry: admin/explanations/opentelemetry.md
+      - Chart structure: admin/explanations/chart-structure.md
     - Reference:
       - Security Model: admin/reference/security_model.md
       - Charts values: admin/reference/values.md
 
+  - Developer Guide:
+    - dev/index.md
+    - Getting started: dev/tutorials/getting-started.md
     - Tutorials:
-      - Run locally: admin/tutorials/run_locally.md
-
-  - Developers:
+      - Larger developments: dev/tutorials/larger-developments.md
+      - Developing DiracX Web: dev/tutorials/develop-web.md
+      - Run a full DiracX instance locally: dev/tutorials/run-locally.md
+      - Play with auth: dev/tutorials/play-with-auth.md
+    - How-To:
+      - Contribute: dev/how-to/contribute.md
+      - Add functionality:
+        - dev/how-to/add-functionality/index.md
+        - New route or router: dev/how-to/add-a-route.md
+        - New task: dev/how-to/add-a-task.md
+        - New DB: dev/how-to/add-a-db.md
+        - New CLI command: dev/how-to/add-a-cli-command.md
+        - New settings: dev/how-to/add-a-setting.md
+      - Develop legacy DIRAC: dev/how-to/develop-legacy-dirac.md
+      - Client customization: dev/how-to/client-customization.md
+      - Client generation: dev/how-to/client-generation.md
+      - Use the demo:
+        - dev/how-to/use-the-demo/index.md
+        - Accessing the client: dev/how-to/use-the-demo/swagger.md
+        - Use swagger: dev/how-to/use-the-demo/swagger.md
+        - Accessing DiracX Web: dev/how-to/use-the-demo/web.md
+      - Write docs: dev/how-to/write-docs.md
     - Explanations:
       - Components:
         - Introduction: dev/explanations/components/index.md
@@ -79,35 +117,21 @@ nav:
         - CLI: dev/explanations/components/cli.md
         - DataBases: dev/explanations/components/db.md
         - Routes: dev/explanations/components/routes.md
-
       - Client: dev/explanations/client.md
       - Testing: dev/explanations/testing.md
       - Run demo: dev/explanations/run_demo.md
-
-    - How-To:
-      - Add a DB: dev/how-to/add-a-db.md
-      - Add a router: dev/how-to/add-a-route.md
-      - Add settings: dev/how-to/add-a-setting.md
-      - Client customization: dev/how-to/client-customization.md
-      - Client generation: dev/how-to/client-generation.md
-      - Write docs: dev/how-to/write-docs.md
-
     - Reference:
+      - Writing tests: dev/reference/writing-tests.md
       - Coding conventions: dev/reference/coding-conventions.md
       - Configuration: dev/reference/configuration.md
       - Dependency injection: dev/reference/dependency-injection.md
-
-    - Tutorials:
-      - Getting started: dev/tutorials/getting-started.md
-      - Play with auth: dev/tutorials/play-with-auth.md
-      - Run locally: dev/tutorials/run-locally.md
-
-  - Project:
+  - Project Info:
     - Introduction: project/index.md
     - Consortium: project/consortium.md
 
 markdown_extensions:
   - admonition
+  - md_in_html
   - def_list
   - pymdownx.tasklist:
       custom_checkbox: true
@@ -127,18 +151,20 @@ markdown_extensions:
       anchor_linenums: true
       line_spans: __span
       pygments_lang_class: true
+  - pymdownx.tabbed:
+      alternate_style: true
   - tables
 
 plugins:
   - diracx:
       repos:
-        - url: https://github.com/DIRACGrid/diracx-charts.git
+        - url: https://github.com/DIRACGrid/diracx-charts
           branch: master
           include:
             - docs
             - diracx
-        - url: https://github.com/chaen/diracx-web.git
-          branch: mkdoc
+        - url: https://github.com/DIRACGrid/diracx-web
+          branch: main
           include:
             - docs
   - search
