--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,6 +53,7 @@ repos:
     - id: mdformat
       args: ["--number"]
       additional_dependencies:
+      - mdformat-mkdocs
       - mdformat-gfm
       - mdformat-black
 
