--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,11 +18,7 @@ repos:
     hooks:
       - id: ruff
         args: ["--fix", "--show-fixes"]
-
-  - repo: https://github.com/psf/black-pre-commit-mirror
-    rev: 25.1.0
-    hooks:
-      - id: black
+      - id: ruff-format
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.15.0
@@ -51,7 +47,4 @@ repos:
     rev: v2.4.1
     hooks:
     - id: codespell
-      args:
-        - "--skip=diracx-client/src/diracx/client/_generated/*, diracx-[a-z]*/tests/*, diracx-testing/*, build/*, extensions/gubbins/gubbins-client/src/gubbins/client/_generated/*, extensions/gubbins/gubbins-*/tests/*"
-        - "--ignore-words-list=CheckIn"
-        - "-w"
+      args: ["-w"]
