--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -253,7 +253,6 @@ jobs:
     name: Build wheels
     runs-on: "ubuntu-latest"
     needs: deploy-pypi
-    if: ${{ needs.deploy-pypi.outputs.create-release == 'true' }}
     defaults:
       run:
         # We need extglob for REFERENCE_BRANCH substitution
@@ -298,7 +297,6 @@ jobs:
     needs:
       - deploy-pypi
       - build-gubbins-wheels
-    if: ${{ needs.deploy-pypi.outputs.create-release == 'true' }}
     timeout-minutes:  30
     runs-on: ubuntu-latest
     steps:
@@ -337,14 +335,16 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: extensions/containers/client
-          push: ${{ needs.deploy-pypi.outputs.create-release == 'true' }}
+          push: ${{ github.event_name != 'pull_request' && github.repository == 'DIRACGrid/diracx' && github.ref_name == 'main' }}
           tags: ghcr.io/diracgrid/gubbins/client:dev
           platforms: linux/amd64,linux/arm64
+          build-args: |
+            EXTRA_PACKAGES_TO_INSTALL=git+https://github.com/DIRACGrid/DIRAC.git@integration
       - name: Build and push service (dev)
         uses: docker/build-push-action@v6
         with:
           context: extensions/containers/services
-          push: ${{ needs.deploy-pypi.outputs.create-release == 'true' }}
+          push: ${{ github.event_name != 'pull_request' && github.repository == 'DIRACGrid/diracx' && github.ref_name == 'main' }}
           tags: ghcr.io/diracgrid/gubbins/services:dev
           platforms: linux/amd64,linux/arm64
           build-args: |
