--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,15 +121,19 @@ jobs:
         with:
           cache: false
           environments: ${{ matrix.extension == 'diracx' && 'default' || 'default-gubbins' }}
-      - name: Build gubbins wheels
-        if: ${{ matrix.extension == 'gubbins' }}
+      - name: Build diracx wheels
         run: |
           for pkg_dir in $PWD/diracx-*; do
             echo "Building $pkg_dir"
-            pixi exec python-build --outdir $PWD/extensions/containers/services/ $pkg_dir
+            pixi exec python-build --outdir $PWD/containers/services/ $pkg_dir
           done
           # Also build the diracx metapackage
-          pixi exec python-build --outdir $PWD/extensions/containers/services/ .
+          pixi exec python-build --outdir $PWD/containers/services/ .
+      - name: Build gubbins wheels
+        if: ${{ matrix.extension == 'gubbins' }}
+        run: |
+          cp $PWD/containers/services/*.whl $PWD/extensions/containers/services/
+          cp $PWD/containers/services/*.tar.gz $PWD/extensions/containers/services/
           # And build the gubbins package
           for pkg_dir in $PWD/extensions/gubbins/gubbins-*; do
             # Skip the testing package
@@ -142,25 +146,33 @@ jobs:
             pixi exec python-build --outdir $PWD/extensions/containers/services/ $pkg_dir
           done
       - name: Set up Docker Buildx
-        if: ${{ matrix.extension == 'gubbins' }}
         uses: docker/setup-buildx-action@v3
+        with:
+          # Use the docker driver to allow the gubbins build to access
+          # the locally built diracx/services:dev image as its base
+          driver: docker
+      - name: Build container for diracx
+        uses: docker/build-push-action@v6
+        with:
+          context: containers/services
+          tags: diracx/services:dev
+          load: true
+          build-args: |
+            EXTRA_PACKAGES_TO_INSTALL=git+https://github.com/DIRACGrid/DIRAC.git@integration#egg=diraccommon\&subdirectory=dirac-common
+
+      - name: Update gubbins Dockerfile base image
+        if: ${{ matrix.extension == 'gubbins' }}
+        run: |
+          sed -i 's|FROM ghcr.io/diracgrid/diracx/services:dev|FROM diracx/services:dev|' extensions/containers/services/Dockerfile
       - name: Build container for gubbins
         if: ${{ matrix.extension == 'gubbins' }}
         uses: docker/build-push-action@v6
         with:
           context: extensions/containers/services
           tags: gubbins/services:dev
-          outputs: type=docker,dest=/tmp/gubbins_services_image.tar
+          load: true
           build-args: |
             EXTENSION_CUSTOM_SOURCES_TO_INSTALL=/bindmount/gubbins_db*.whl,/bindmount/gubbins_logic*.whl,/bindmount/gubbins_routers*.whl,/bindmount/gubbins_client*.whl
-      - name: Load image
-        if: ${{ matrix.extension == 'gubbins' }}
-        run: |
-          docker load --input /tmp/gubbins_services_image.tar
-          # Free up disk space by removing the tarball after loading the image
-          rm -Rf /tmp/gubbins_services_image.tar
-          docker builder prune -af || true
-          docker image ls -a
       - name: Start demo
         run: |
           git clone https://github.com/DIRACGrid/diracx-charts.git ../diracx-charts
@@ -169,7 +181,9 @@ jobs:
           demo_args+=("--enable-open-telemetry")
           demo_args+=("--enable-coverage")
           demo_args+=("--exit-when-done")
+          demo_args+=("--set-value" "developer.autoReload=false")
           demo_args+=("--ci-values" "../diracx-charts/demo/ci_values.yaml")
+          demo_args+=("--prune-loaded-images")
 
           declare -a demo_source_dirs=("$PWD")
 
@@ -177,8 +191,6 @@ jobs:
           ../diracx-charts/run_demo.sh --only-download-deps
 
           if [ ${{ matrix.extension }} == 'gubbins' ]; then
-            demo_args+=("--set-value" "diracx.developer.autoReload=false")
-
             # We have to copy the code to another directory
             # and make it a git repository by itself because otherwise the
             # root in the pyproject do not make sense once mounted
@@ -196,11 +208,11 @@ jobs:
             demo_args+=("--ci-values" "./extensions/gubbins_values.yaml")
             demo_args+=("--load-docker-image" "gubbins/services:dev")
             demo_source_dirs+=("/tmp/gubbins/")
-          elif [ ${{ matrix.extension }} != 'diracx' ]; then
+          elif [ ${{ matrix.extension }} == 'diracx' ]; then
+            demo_args+=("--load-docker-image" "diracx/services:dev")
+          else
             echo "Unknown extension: ${{ matrix.extension }}"
             exit 1
-          else
-            demo_args+=("--set-value" "developer.autoReload=false")
           fi
 
           # Run the demo with the provided arguments
