--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,7 +86,7 @@ jobs:
         uses: codecov/codecov-action@v5.4.3
 
   pytest-integration:
-    name: Integration test - ${{ matrix.dbName }}
+    name: Integration test - ${{ matrix.db.name }} & ${{matrix.extension}}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
