Alembic automatic trigger creation

--- a/diracx-db/pyproject.toml
+++ b/diracx-db/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pydantic >=2.10",
     "sqlalchemy[aiomysql,aiosqlite] >= 2",
     "uuid-utils",
+    "alembic"
 ]
 dynamic = ["version"]
 
