--- a/diracx-testing/pyproject.toml
+++ b/diracx-testing/pyproject.toml
@@ -14,7 +14,7 @@ classifiers = [
 ]
 dependencies = [
     "pytest",
-    "pytest-asyncio",
+    "pytest-asyncio==1.0.0",
     "pytest-cov",
     "pytest-xdist",
     "httpx",
