--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -62,7 +62,13 @@ jobs:
           if [ -f client-tests-failed ]; then has_error=1; echo "Client tests failed"; fi
           if [ -f pilot-tests-failed ]; then has_error=1; echo "Pilot tests failed"; fi
           if [ ${has_error} = 1 ]; then exit 1; fi
-      - name: diracx logs
+      - name: diracx filtered requests logs
+        run: |
+          docker logs diracx 2>/dev/null | grep '/api/' \
+            | awk -F\" '{print $2, $3}' \
+            | awk '{print $1, $2, $4}' \
+            | sort | uniq -c | sort
+      - name: diracx error logs
         if: ${{ failure() }}
         run: |
           mkdir -p /tmp/service-logs
