--- a/diracx-core/pyproject.toml
+++ b/diracx-core/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "cachetools",
     "email_validator",
     "gitpython",
-    "joserfc",
+    "joserfc >=1.1.0",
     "pydantic >=2.10",
     "pydantic-settings",
     "pyyaml",
