docs: Add edit buttons to documentation pages

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ theme:
   icon:
     logo: logo
   features:
+    - content.action.edit
     - content.code.annotate
     - content.code.copy
     - content.tabs.link
