feat: Add a 'create secrets' command in the CLI

--- a/diracx-cli/pyproject.toml
+++ b/diracx-cli/pyproject.toml
@@ -39,6 +39,7 @@ dirac = "diracx.cli:app"
 [project.entry-points."diracx.cli"]
 jobs = "diracx.cli.jobs:app"
 config = "diracx.cli.config:app"
+pilots = "diracx.cli.pilots:app"
 
 [project.entry-points."diracx.cli.hidden"]
 internal = "diracx.cli.internal:app"
