--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -21,7 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         dirac-branch:
-          - robin-pilot-registrations
+          - robin-pilot-logging
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
