--- a/pixi.toml
+++ b/pixi.toml
@@ -90,6 +90,8 @@ cmd = "cd extensions/gubbins/gubbins-logic/ && pytest"
 cmd = "cd extensions/gubbins/gubbins-routers/ && pytest"
 
 # Features for generating the documentation
+[feature.mkdocs.dependencies]
+python = "*"
 [feature.mkdocs.pypi-dependencies]
 mkdocs-material = "*"
 mkdocs-diracx-plugin = { git = "https://github.com/DIRACGrid/mkdocs-diracx-plugin.git", branch = "master"}
@@ -141,7 +143,7 @@ diracx-generate-client = {features = ["client-gen", "diracx-client", "diracx-rou
 gubbins-generate-client = {features = ["client-gen", "diracx-client", "gubbins-client", "diracx-routers", "gubbins-routers", "diracx-logic", "gubbins-logic", "diracx-db", "gubbins-db", "diracx-core", "gubbins-core"], solve-group = "gubbins"}
 
 # Tooling environments
-mkdocs = ["mkdocs"]
+mkdocs = {features = ["mkdocs"], no-default-feature = true}
 shellcheck = {features = ["shellcheck"], no-default-feature = true}
 pre-commit = {features = ["pre-commit"], no-default-feature = true}
 
