docs: fix mkdocs navigation warnings
- Fix write-docs.md path reference in navigation
- Add missing pages to nav configuration
- Include deploy_instance.md, manage_dependencies.md, etc.
- Add user web pages and developer setup guides

--- a/pixi.toml
+++ b/pixi.toml
@@ -97,6 +97,7 @@ mkdocs-material = "*"
 mkdocs-diracx-plugin = { git = "https://github.com/DIRACGrid/mkdocs-diracx-plugin.git", branch = "master"}
 [feature.mkdocs.tasks]
 mkdocs = "mkdocs serve"
+mkdocs-build = "mkdocs build --strict"
 
 # Features for running pre-commit hooks
 [feature.pre-commit.dependencies]
