--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,6 +57,8 @@ nav:
     - Web:
       - user/web/index.md
       - Logging in: user/web/login_out.md
+      - List and share applications: user/web/list_and_share_applications.md
+      - Monitor jobs: user/web/monitor_jobs.md
     - Programmatic Usage:
       - user/reference/programmatic-usage/index.md
       - Command Line: user/reference/programmatic-usage/command-line-interface.md
@@ -76,9 +78,12 @@ nav:
         - Convert CS: admin/how-to/install/convert-cs.md
         - Register a VO: admin/how-to/install/register-a-vo.md
         - Register the admin VO: admin/how-to/install/register-the-admin-vo.md
+      - Deploy web instance: admin/deploy_instance.md
       - Debugging: admin/how-to/debugging.md
       - Upgrading: admin/how-to/upgrading.md
       - Rotate a secret: admin/how-to/rotate-a-secret.md
+      - Manage dependencies: admin/manage_dependencies.md
+      - Manage release: admin/manage_release.md
     - Explanations:
       - Configuration: admin/explanations/configuration.md
       - OpenTelemetry: admin/explanations/opentelemetry.md
@@ -88,6 +93,10 @@ nav:
     - Reference:
       - Security Model: admin/reference/security_model.md
       - Charts values: admin/reference/values.md
+      - REFERENCE.md
+      - RUN_PROD.md
+      - SECURITY.md
+      - SSO.md
 
   - Developer Guide:
     - dev/index.md
@@ -99,7 +108,7 @@ nav:
       - Play with auth: dev/tutorials/play-with-auth.md
     - How-To:
       - Contribute: dev/how-to/contribute.md
-      - Write docs: dev/how-to/write-docs.md
+      - Write docs: dev/tutorials/write-docs.md
       - Add functionality:
         - dev/how-to/add-functionality/index.md
         - New route or router: dev/how-to/add-a-route.md
@@ -107,6 +116,7 @@ nav:
         - New DB: dev/how-to/add-a-db.md
         - New CLI command: dev/how-to/add-a-cli-command.md
         - New settings: dev/how-to/add-a-setting.md
+        - Add a test: dev/how-to/add-a-test.md
       - Develop legacy DIRAC: dev/how-to/develop-legacy-dirac.md
       - Use the demo:
         - dev/how-to/use-the-demo/index.md
@@ -116,6 +126,9 @@ nav:
       - Client customization: dev/how-to/client-customization.md
       - Client generation: dev/how-to/client-generation.md
       - Client extensions: dev/how-to/client-extension.md
+      - Setup environment: dev/setup_environment.md
+      - Manage extensions: dev/manage_extension.md
+      - Web architecture: dev/web-arch.md
     - Explanations:
       - Components:
         - Introduction: dev/explanations/components/index.md
