chore(ci): pixi --no-install does not work anymore in the CI

--- a/diracx-testing/pyproject.toml
+++ b/diracx-testing/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "httpx",
     "joserfc",
     "uuid-utils",
+    "pytest-github-actions-annotate-failures",
 ]
 dynamic = ["version"]
 
