feat: add pre-commit check for lollygag

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -62,3 +62,12 @@ repos:
     hooks:
     - id: codespell
       args: ["-w"]
+
+  - repo: local
+    hooks:
+      - id: check-lollygag
+        name: check for lollygag
+        types: [python]
+        entry: '(?i)lollygag'
+        language: pygrep
+        files: ^diracx
