--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -135,11 +135,9 @@ nav:
         - New CLI command: dev/how-to/add-a-cli-command.md
         - New settings: dev/how-to/add-a-setting.md
         - Add a test: dev/how-to/add-a-test.md
-      - Extend DiracX:
-        - dev/how-to/extend-diracx/index.md
       - Develop legacy DIRAC: dev/how-to/develop-legacy-dirac.md
       - Use the demo:
-        - dev/how-to/use-the-demo/index.md
+        - dev/how-to/run-demo.md
         - Accessing the client: dev/how-to/use-the-demo/swagger.md
         - Use swagger: dev/how-to/use-the-demo/swagger.md
         - Accessing DiracX Web: dev/how-to/use-the-demo/web.md
