refactor: Make Operations configuration VO-specific
- Replace global "Defaults" Operations config with VO-specific configuration
- Add recursive_merge utility for merging configuration dictionaries
- Update job query and status logic to use VO-specific Operations settings
- Add model validator to automatically merge defaults into VO-specific configs
- Support compatibility mode via DIRAC_COMPAT_ENABLE_CS_CONVERSION env var
- Update test configurations to remove hardcoded "Defaults" entries
- Fix YAML formatting in integration test configuration

This change improves security and flexibility by ensuring each VO has its own
Operations configuration rather than relying on a global defaults approach.

--- a/diracx-cli/tests/legacy/cs_sync/integration_test.yaml
+++ b/diracx-cli/tests/legacy/cs_sync/integration_test.yaml
@@ -33,6 +33,7 @@ Operations:
         CatalogList: FileCatalog, TSCatalog, MultiVOFileCatalog
     Transformations:
       DataProcessing: MCSimulation, Merge, DataReprocessing
+  Jenkins: {}
   vo:
     Shifter:
       DataManager:
@@ -690,9 +691,8 @@ Systems:
         SubmitStatus: Active, Completing
         SubmitTasks: 'yes'
         TaskUpdateChunkSize: '0'
-        TaskUpdateStatus: Checking, Deleted, Killed, Staging, Stalled, Matched,
-          Scheduled, Rescheduled, Completed, Submitted, Assigned, Received, Waiting,
-          Running
+        TaskUpdateStatus: Checking, Deleted, Killed, Staging, Stalled, Matched, Scheduled,
+          Rescheduled, Completed, Submitted, Assigned, Received, Waiting, Running
         TasksPerLoop: '50'
         TransType: ''
         UpdateFilesStatus: Active, Completing, Stopped
@@ -726,8 +726,7 @@ Systems:
         TaskUpdateStatus: Submitted, Received, Waiting, Running, Matched, Completed,
           Failed
         TasksPerLoop: '50'
-        TransType: MCSimulation, DataReconstruction, DataStripping, MCStripping,
-          Merge
+        TransType: MCSimulation, DataReconstruction, DataStripping, MCStripping, Merge
         UpdateFilesStatus: Active, Completing, Stopped
         UpdateTasksStatus: Active, Completing, Stopped
         maxNumberOfThreads: '15'
@@ -787,8 +786,8 @@ Systems:
     Executors:
       Optimizers:
         JobScheduling:
-          RescheduleDelays: '0'
           MaxRescheduling: '3'
+          RescheduleDelays: '0'
     FailoverURLs: {}
     Services:
       Matcher:
