feat: add DIRACCommon dependency and update imports
- Add diraccommon >=9.0.0a67 dependency to diracx-core and diracx-logic
- Update mypy overrides from DIRAC.* to DIRACCommon.* in root and gubbins
- Replace dirac dependency with diraccommon in diracx-logic

--- a/diracx-core/pyproject.toml
+++ b/diracx-core/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "pydantic-settings",
     "pyyaml",
     "sh",
+    "diraccommon >=9.0.0a67",
 ]
 dynamic = ["version"]
 
@@ -43,6 +44,9 @@ types = [
 properties_module = "diracx.core.properties"
 config = "diracx.core.config.schema:Config"
 extension = "diracx"
+
+[project.entry-points."diracx.resources"]
+find_compatible_platforms = "diracx.core.resources:find_compatible_platforms"
 
 [build-system]
 requires = ["hatchling", "hatch-vcs"]
