--- a/extensions/gubbins/pyproject.toml
+++ b/extensions/gubbins/pyproject.toml
@@ -107,7 +107,7 @@ explicit_package_bases = true
 enable_error_code = ["import", "attr-defined"]
 
 [[tool.mypy.overrides]]
-module = 'DIRAC.*'
+module = 'DIRACCommon.*'
 ignore_missing_imports = true
 
 [tool.pytest.ini_options]
