--- a/pyproject.toml
+++ b/pyproject.toml
@@ -147,7 +147,7 @@ explicit_package_bases = true
 enable_error_code = ["import", "attr-defined"]
 
 [[tool.mypy.overrides]]
-module = 'DIRAC.*'
+module = 'DIRACCommon.*'
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
