test: Add missing test dependency on pyjwt

--- a/diracx-routers/pyproject.toml
+++ b/diracx-routers/pyproject.toml
@@ -33,7 +33,7 @@ dependencies = [
 dynamic = ["version"]
 
 [project.optional-dependencies]
-testing = ["diracx-testing", "moto[server]", "pytest-httpx", "freezegun",]
+testing = ["diracx-testing", "moto[server]", "pytest-httpx", "freezegun", "pyjwt"]
 types = [
     "types-cachetools",
     "types-python-dateutil",
