--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -190,7 +190,7 @@ jobs:
           push: ${{ needs.deploy-pypi.outputs.create-release == 'true' }}
           tags: "ghcr.io/diracgrid/diracx/client:${{ needs.deploy-pypi.outputs.new-version }}"
           platforms: linux/amd64,linux/arm64
-          build-args: EXTRA_PACKAGES_TO_INSTALL=DIRAC~=9.0.0a1
+          build-args: EXTRA_PACKAGES_TO_INSTALL=DIRACCommon~=9.0.0a1
       - name: Build and push services (release)
         uses: docker/build-push-action@v6
         if: ${{ needs.deploy-pypi.outputs.create-release == 'true' }}
@@ -199,7 +199,7 @@ jobs:
           push: ${{ needs.deploy-pypi.outputs.create-release == 'true' }}
           tags: "ghcr.io/diracgrid/diracx/services:${{ needs.deploy-pypi.outputs.new-version }}"
           platforms: linux/amd64,linux/arm64
-          build-args: EXTRA_PACKAGES_TO_INSTALL=DIRAC~=9.0.0a1
+          build-args: EXTRA_PACKAGES_TO_INSTALL=DIRACCommon~=9.0.0a1
 
       - name: Build and push client (dev)
         uses: docker/build-push-action@v6
@@ -209,7 +209,7 @@ jobs:
           tags: ghcr.io/diracgrid/diracx/client:dev
           platforms: linux/amd64,linux/arm64
           build-args: |
-            EXTRA_PACKAGES_TO_INSTALL=git+https://github.com/DIRACGrid/DIRAC.git@integration
+            EXTRA_PACKAGES_TO_INSTALL=git+https://github.com/DIRACGrid/DIRAC.git@integration#egg=diraccommon\&subdirectory=dirac-common
       - name: Build and push services (dev)
         uses: docker/build-push-action@v6
         with:
@@ -218,7 +218,7 @@ jobs:
           tags: ghcr.io/diracgrid/diracx/services:dev
           platforms: linux/amd64,linux/arm64
           build-args: |
-            EXTRA_PACKAGES_TO_INSTALL=git+https://github.com/DIRACGrid/DIRAC.git@integration
+            EXTRA_PACKAGES_TO_INSTALL=git+https://github.com/DIRACGrid/DIRAC.git@integration#egg=diraccommon\&subdirectory=dirac-common
 
   update-charts:
     name: Update Helm charts
